--- a/website/index.html
+++ b/website/index.html
@@ -328,7 +328,7 @@
             position: fixed;
             inset: 0;
             pointer-events: none;
-            z-index: 5;
+            z-index: 15;
             overflow: hidden;
         }
         .global-particles .particle {
@@ -762,7 +762,7 @@
             </div>
 
             <!-- DNA Helix (Biological Style) -->
-            <div class="absolute top-4 right-6 opacity-20 force-animate hidden lg:block" style="will-change: transform;">
+            <div class="absolute top-4 right-6 opacity-20 force-animate hidden lg:block" style="will-change: transform; z-index: 15;">
                 <svg width="260" height="360" viewBox="0 0 260 360" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <defs>
                         <linearGradient id="dnaA" x1="0" y1="0" x2="1" y2="1">
